# mcalc

./: .gitignore  Build.PL  LICENSE  META.json  META.yml  Makefile  Makefile.am  README.md  configure.ac  doc.pod  evaluator.pm  evaluator.t  grammar.org  mcalc.pl  parser.pm  parser.t  todo.md
doc/: doc.pod
it/: input  output  runner.pl
lib/: ComplexFunctions.pm  Evaluator.pm  Parser.pm  SimpleFunctions.pm  TrigonometricFunctions.pm  evaluator.pm
lib/MCalc/: Colorizer.pm  CompoundContext.pm  Context.pm  DefaultContext.pm  Evaluateable.pm  Evaluator.pm  Language.pm  Parser.pm  PrettyPrinter.pm  Printer.pm  SimpleContext.pm  SimplePrinter.pm
lib/MCalc/Functions/: Absolute.pm  Addition.pm  ArcCosine.pm  ArcSine.pm  ArcTangent.pm  ArithmeticFunction.pm  Assignment.pm  Ceiling.pm  Cosine.pm  Cotangent.pm  Division.pm  Floor.pm  Integration.pm  Ln.pm  Log.pm  Multiplication.pm  Negation.pm  Power.pm  Product.pm  Rounding.pm  SimpleFunction.pm  Simplification.pm  Simplify.pm  Sine.pm  Sqrt.pm  Subtraction.pm  Sum.pm  Tangent.pm  UserFunction.pm
lib/MCalc/Util/: Rule.pm  Simplification.pm  TreeBuilder.pm  TreeManipulation.pm
src/: evaluator.pm  mcalc.pl  parser.pm
t/: Evaluator.t  Parser.t
t/MCalc/: Colorizer.t  CompoundContext.t  Context.t  DefaultContext.t  Evaluator.t  Language.t  Parser.t  PrettyPrinter.t  Printer.t  SimpleContext.t  SimplePrinter.t
t/MCalc/Functions/: Addition.t  Assignment.t  Integration.t  Multiplication.t  Product.t  SimpleFunction.t  Simplification.t  Simplify.t  Sum.t  UserFunction.t
test/: Parser.t  evaluator.t  parser.t
(+4 files in other folders)
